deployment/prd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - host: atcoder-search.fjnkt98.com
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 3000
